--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/dosandk/online-editor-tasks#readme",
   "devDependencies": {
+    "cli-create-task": "file:/./cli-create-task",
+    "cli-tracks-parser": "file:/./cli-tracks-parser",
     "editorconfig-checker": "^4.0.2",
     "eslint": "^8.15.0",
     "husky": "^8.0.1",
@@ -36,9 +38,7 @@
     "karma-chrome-launcher": "^3.1.1",
     "karma-jasmine": "^5.0.0",
     "karma-mocha-reporter": "^2.2.5",
-    "lint-staged": "^12.4.2",
-    "cli-create-task": "file:/./cli-create-task",
-    "cli-tracks-parser": "file:/./cli-tracks-parser"
+    "lint-staged": "^12.4.2"
   },
   "lint-staged": {
     "*.js": [
